# cansi-embarcado

uff/: .projections.json  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  about  about.am  about.c  autogen.sh  config.h  config.status  configure  configure.ac
uff/.deps/: about.Po
uff/autom4te.cache/: output.0  requests  traces.0  traces.1
uff/examples/a1/: .local.vimrc  .projections.json  CMakeLists.txt  Makefile  a  aaa  array.c  array.h  bb.c  eq2.c  eq2.h  equation  exemplo.md  exemplo10.c  exemplo11.c  exemplo12.c  exemplo13.c  exemplo2.c  exemplo3.c  exemplo4.c  exemplo5.c  exemplo6.c  exemplo7.c  exemplo8.c  exemplo9.c  exemplos.txt  infix_postfix_using_stack.c  list.c  narray.c  pythagoras.c  string.c
uff/examples/a1/ss/: a  b  d  equation  equation.c  exemplo8  exemplo8.c
uff/examples/a2/: CMakeLists.txt  Makefile  main.c  matrix.h
uff/examples/a3/: .local.vimrc  Makefile  StartedState.c  TableBased.c  WatchStateInternal.h  error.h  main
uff/examples/dynarrays/: .gdb_history  Makefile  Makefile.in  a.sh  ex-1.c  main  main.gdb
uff/examples/g1/af/exemploTemplate/: Makefile  USAGE  genfile.sh
uff/examples/g1/af/exemploTemplate/model/: mklinks.sh  rmlinks_sh.tmpl
uff/examples/g1/af/exemploTemplate/view/: AbstractFactory.py  view.py
uff/examples/g1/af/exemploTemplate/view/.ropeproject/: globalnames  objectdb
uff/examples/g1/af/java.1.2/view/.ropeproject/: globalnames  objectdb
uff/examples/g1/af/java/view/.ropeproject/: globalnames  objectdb
uff/examples/gdb/01/: Makefile  Makefile.am  Makefile.in  ex-1.c  ex-2.c  main
uff/examples/gdb/01/.deps/: main-ex-1.Po
uff/examples/list/: Makefile  Makefile.am  Makefile.in  main
uff/examples/list/.deps/: main-ex-1.Po
uff/examples/models/Sturm/: Makefile  Makefile.am  Makefile.in  main  main.c  solve.h
uff/examples/models/Sturm/.deps/: main-main.Po  main-sturm.Po  main-util.Po
uff/examples/models/eq2/: Makefile  Makefile.am  Makefile.in  array.h  datatype.h  eq2.h  main  main.c  test-1.gdb  test-2.gdb
uff/examples/models/eq2/.deps/: main-array.Po  main-main.Po
uff/examples/models/eq3/: .gdb_history  .projections.json  Makefile  Makefile.am  Makefile.in  array.c  complex.h  eq2.c  eq2.h  eq3.c  eq3.h  except.h  gdb.txt  main  main.c  pythagoras.c  test-1.gdb
uff/examples/models/eq3/.deps/: main-eq2.Po  main-eq3.Po  main-main.Po
uff/examples/models/eq4/: .local.vimrc  Makefile  Makefile.am  Makefile.in  array.c  array.h  eq4.c  main  main.c  pythagoras.h  tags  test-1.gdb
uff/examples/models/eq4/.deps/: main-eq2.Po  main-eq3.Po  main-eq4.Po  main-main.Po  main-pythagoras.Po
uff/examples/models/pythagoras/: Makefile  Makefile.am  Makefile.in  main  main.c  main.gdb  pythagoras.h  real.h
uff/examples/models/pythagoras/.deps/: main-main.Po  main-pythagoras.Po
uff/examples/models/tree/: .local.vimrc  Makefile  Makefile.am  Makefile.in  eq3.c  eq3.h  eq4.c  eq4.h  except.h  main  main.c  narray.c  tags  test-2.gdb
uff/examples/models/tree/.deps/: main-array.Po  main-eq2.Po  main-eq3.Po  main-eq4.Po  main-local_string.Po  main-main.Po  main-narray.Po
uff/examples/tree/: .gdb_history  Makefile  Makefile.am  Makefile.in  dddgraph.ps  ex-1.c  main  tags  test.gdb
uff/examples/tree/.deps/: main-ex-1.Po
uff/source/: Makefile  Makefile.am  Makefile.in  lex.c
uff/source/.deps/: libbitree_a-bitree.Po  liblist_a-list.Po  libtraverse_a-traverse.Po
