# We don't want to follow GNU file setup (no README, no AUTHORS, etc)
AUTOMAKE_OPTIONS = foreign

ACLOCAL_AMFLAGS  = -I m4 --install
EXTRA_DIST       = autogen.sh

SUBDIRS = \
	source            \
	examples/list     \
	examples/tree     \
	examples/dynarrays\
	examples/gdb/01   \
	examples/models/pythagoras \
	examples/models/eq2        \
	examples/models/eq3        \
	examples/models/eq4        \
	examples/models/tree       \
	examples/models/Sturm

include about.am
