# all we have to do is to specify a noinst_ library here.
noinst_LIBRARIES = liblist.a libbitree.a libtraverse.a
liblist_a_CPPFLAGS = -I$(top_srcdir)/include
liblist_a_SOURCES = list.c

libbitree_a_CPPFLAGS = -I$(top_srcdir)/include
libbitree_a_SOURCES = bitree.c

libtraverse_a_CPPFLAGS = -I$(top_srcdir)/include
libtraverse_a_SOURCES = traverse.c

#include_HEADERS=$(top_srcdir)/include/list.h

